--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -15,20 +15,19 @@ http {
 
     server {
         listen 80;
-        server_name _;
-
+        server_name {{ app_domain }};
+        # React frontend
+        location / {
+            root /var/www/frontend/dist;
+            try_files $uri $uri/ /index.html;
+            index index.html;
+        }
         location /api/ {
             proxy_pass http://127.0.0.1:3000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location / {
-            root /var/www/frontend/dist;
-            try_files $uri $uri/ /index.html;
-            index index.html;
         }
     }
 }
