--- a/roles/laravel/templates/env.j2
+++ b/roles/laravel/templates/env.j2
@@ -20,4 +20,6 @@ AWS_BUCKET={{ aws_s3_bucket }}
 
 IMG_ENDPOINT=https://multibook-img.cloud.makedara.work
 
-# ...他の必要な環境変数...
+GOOGLE_CLIENT_ID={{ google_client_id }}
+GOOGLE_CLIENT_SECRET={{ google_client_secret }}
+GOOGLE_REDIRECT_URI={{ google_redirect_uri }}
