--- a/roles/laravel/templates/env.j2
+++ b/roles/laravel/templates/env.j2
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL={{ app_url }}
+APP_URL=https://multibook.cloud.makedara.work
 
 LOG_CHANNEL=stack
 
